Refactor: data agent and base data agent types
- refactor data agent type's generic parameter type
- add native mongoose type to data agent method definations
- refactor data agent method defination's return type
- refactor base data agent type to match changes made to data agent abstract type
- refactor expense data agent aggregate functionality to better handle date and userId arguments
- refactor expense aggregate test cases to match the mentioned changes
- refactor expense router to modify expense aggregate route paths
